# context_embed_utils

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml
context_embed_utils/: __init__.py  main.py
tests/: test_main.py
tests/resources/: test_token_embeddings_01.npy  test_token_ids_01.pkl  test_word_embeddings_01.npy
